build/log/idf_py_stdout_output_54025
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/rast/esp/BtD/build/bootloader/esp-idf/esptool_py && /Users/rast/.espressif/python_env/idf5.1_py3.11_env/bin/python /Users/rast/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/rast/esp/BtD/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main_esp.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main_esp.cpp.obj 
/Users/rast/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-1146-g1308ff3d21\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/rast/esp/BtD/build/config -I/Users/rast/esp/BtD/main/driver -I/Users/rast/esp/esp-idf/components/newlib/platform_include -I/Users/rast/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/rast/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/rast/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/rast/esp/esp-idf/components/freertos/esp_additions/include -I/Users/rast/esp/esp-idf/components/esp_hw_support/include -I/Users/rast/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/rast/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/rast/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/rast/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/rast/esp/esp-idf/components/heap/include -I/Users/rast/esp/esp-idf/components/log/include -I/Users/rast/esp/esp-idf/components/soc/include -I/Users/rast/esp/esp-idf/components/soc/esp32/. -I/Users/rast/esp/esp-idf/components/soc/esp32/include -I/Users/rast/esp/esp-idf/components/hal/esp32/include -I/Users/rast/esp/esp-idf/components/hal/include -I/Users/rast/esp/esp-idf/components/hal/platform_port/include -I/Users/rast/esp/esp-idf/components/esp_rom/include -I/Users/rast/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/rast/esp/esp-idf/components/esp_rom/esp32 -I/Users/rast/esp/esp-idf/components/esp_common/include -I/Users/rast/esp/esp-idf/components/esp_system/include -I/Users/rast/esp/esp-idf/components/esp_system/port/soc -I/Users/rast/esp/esp-idf/components/esp_system/port/include/private -I/Users/rast/esp/esp-idf/components/xtensa/include -I/Users/rast/esp/esp-idf/components/xtensa/esp32/include -I/Users/rast/esp/esp-idf/components/lwip/include -I/Users/rast/esp/esp-idf/components/lwip/include/apps -I/Users/rast/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/rast/esp/esp-idf/components/lwip/lwip/src/include -I/Users/rast/esp/esp-idf/components/lwip/port/esp32/include -I/Users/rast/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/rast/esp/esp-idf/components/esp_ringbuf/include -I/Users/rast/esp/esp-idf/components/efuse/include -I/Users/rast/esp/esp-idf/components/efuse/esp32/include -I/Users/rast/esp/esp-idf/components/driver/include -I/Users/rast/esp/esp-idf/components/driver/deprecated -I/Users/rast/esp/esp-idf/components/driver/esp32/include -I/Users/rast/esp/esp-idf/components/esp_pm/include -I/Users/rast/esp/esp-idf/components/mbedtls/port/include -I/Users/rast/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/rast/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/rast/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/rast/esp/esp-idf/components/esp_app_format/include -I/Users/rast/esp/esp-idf/components/bootloader_support/include -I/Users/rast/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/Users/rast/esp/esp-idf/components/app_update/include -I/Users/rast/esp/esp-idf/components/spi_flash/include -I/Users/rast/esp/esp-idf/components/pthread/include -I/Users/rast/esp/esp-idf/components/esp_timer/include -I/Users/rast/esp/esp-idf/components/app_trace/include -I/Users/rast/esp/esp-idf/components/esp_event/include -I/Users/rast/esp/esp-idf/components/nvs_flash/include -I/Users/rast/esp/esp-idf/components/esp_phy/include -I/Users/rast/esp/esp-idf/components/esp_phy/esp32/include -I/Users/rast/esp/esp-idf/components/vfs/include -I/Users/rast/esp/esp-idf/components/esp_netif/include -I/Users/rast/esp/esp-idf/components/wpa_supplicant/include -I/Users/rast/esp/esp-idf/components/wpa_supplicant/port/include -I/Users/rast/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/Users/rast/esp/esp-idf/components/esp_wifi/include -I/Users/rast/esp/esp-idf/components/unity/include -I/Users/rast/esp/esp-idf/components/unity/unity/src -I/Users/rast/esp/esp-idf/components/cmock/CMock/src -I/Users/rast/esp/esp-idf/components/console -I/Users/rast/esp/esp-idf/components/http_parser -I/Users/rast/esp/esp-idf/components/esp-tls -I/Users/rast/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/rast/esp/esp-idf/components/esp_adc/include -I/Users/rast/esp/esp-idf/components/esp_adc/interface -I/Users/rast/esp/esp-idf/components/esp_adc/esp32/include -I/Users/rast/esp/esp-idf/components/esp_adc/deprecated/include -I/Users/rast/esp/esp-idf/components/esp_eth/include -I/Users/rast/esp/esp-idf/components/esp_gdbstub/include -I/Users/rast/esp/esp-idf/components/esp_gdbstub/xtensa -I/Users/rast/esp/esp-idf/components/esp_gdbstub/esp32 -I/Users/rast/esp/esp-idf/components/esp_hid/include -I/Users/rast/esp/esp-idf/components/tcp_transport/include -I/Users/rast/esp/esp-idf/components/esp_http_client/include -I/Users/rast/esp/esp-idf/components/esp_http_server/include -I/Users/rast/esp/esp-idf/components/esp_https_ota/include -I/Users/rast/esp/esp-idf/components/esp_lcd/include -I/Users/rast/esp/esp-idf/components/esp_lcd/interface -I/Users/rast/esp/esp-idf/components/protobuf-c/protobuf-c -I/Users/rast/esp/esp-idf/components/protocomm/include/common -I/Users/rast/esp/esp-idf/components/protocomm/include/security -I/Users/rast/esp/esp-idf/components/protocomm/include/transports -I/Users/rast/esp/esp-idf/components/esp_local_ctrl/include -I/Users/rast/esp/esp-idf/components/esp_psram/include -I/Users/rast/esp/esp-idf/components/espcoredump/include -I/Users/rast/esp/esp-idf/components/espcoredump/include/port/xtensa -I/Users/rast/esp/esp-idf/components/wear_levelling/include -I/Users/rast/esp/esp-idf/components/sdmmc/include -I/Users/rast/esp/esp-idf/components/fatfs/diskio -I/Users/rast/esp/esp-idf/components/fatfs/vfs -I/Users/rast/esp/esp-idf/components/fatfs/src -I/Users/rast/esp/esp-idf/components/idf_test/include -I/Users/rast/esp/esp-idf/components/idf_test/include/esp32 -I/Users/rast/esp/esp-idf/components/ieee802154/include -I/Users/rast/esp/esp-idf/components/json/cJSON -I/Users/rast/esp/esp-idf/components/mqtt/esp-mqtt/include -I/Users/rast/esp/esp-idf/components/perfmon/include -I/Users/rast/esp/esp-idf/components/spiffs/include -I/Users/rast/esp/esp-idf/components/ulp/ulp_common/include -I/Users/rast/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/Users/rast/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/rast/esp/BtD=. -fmacro-prefix-map=/Users/rast/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main_esp.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main_esp.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main_esp.cpp.obj -c /Users/rast/esp/BtD/main/main_esp.cpp
In file included from /Users/rast/esp/BtD/main/main_esp.cpp:9:
/Users/rast/esp/BtD/main/PHT.hpp: In function 'int run_I2C()':
/Users/rast/esp/BtD/main/PHT.hpp:23:9: error: either all initializer clauses should be designated or none of them should be
   23 |         .master.clk_speed = 400000,
      |         ^
/Users/rast/esp/BtD/main/PHT.hpp:23:9: error: expected primary-expression before '.' token
/Users/rast/esp/BtD/main/PHT.hpp:30:87: error: 'portTICK_RATE_MS' was not declared in this scope; did you mean 'portTICK_PERIOD_MS'?
   30 |         i2c_master_read_from_device(I2C_NUM_0, I2C_SLAVE_ADDR, rx_data, 5, TIMEOUT_MS/portTICK_RATE_MS);
      |                                                                                       ^~~~~~~~~~~~~~~~
      |                                                                                       portTICK_PERIOD_MS
/Users/rast/esp/BtD/main/PHT.hpp:30:9: error: 'i2c_master_read_from_device' was not declared in this scope
   30 |         i2c_master_read_from_device(I2C_NUM_0, I2C_SLAVE_ADDR, rx_data, 5, TIMEOUT_MS/portTICK_RATE_MS);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/rast/esp/BtD/main/PHT.hpp:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1plus: some warnings being treated as errors
ninja: build stopped: subcommand failed.
